commit server programs products categories

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon main.js",
+    "dev": "nodemon main.js server.js",
     "start": "npm run generate-data && node main.js",
     "generate-data": "node generate-data.js",
     "auth": "nodemon server.js"
