--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon main.js server.js",
-    "start": "npm run generate-data && node main.js",
+    "dev": "nodemon main.js",
+    "start": "concurrently \"npm run auth\" \"npm run dev\"",
     "generate-data": "node generate-data.js",
     "auth": "nodemon server.js"
   },
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "concurrently": "^7.3.0",
     "faker": "^5.5.3",
     "json-server": "^0.17.0",
     "jsonwebtoken": "^8.5.1"
