--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node main.js",
-    "start": "node main.js",
-    "generate-data": "node generate-data.js",
-    "auth": "node server.js"
+    "start": "node main.js"
   },
   "keywords": [
     "json-server"
